# oslab1

./: CMakeLists.txt
include/: os.h  pipe.h
src/: child.cpp  main.cpp  os.cpp  parent.cpp  pipe.cpp
